Changed to work with Heroku

--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,17 @@ jar {
     manifest {
         attributes 'Main-Class': 'simpl1f1ed.bot.App'
     }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
-task run(type: JavaExec) {
-    main = 'simpl1f1ed.bot.App'
-    classpath = sourceSets.main.runtimeClasspath
-    args = [] // Add any arguments you want to pass to your application
+task stage(dependsOn: ['build', 'clean']) {
+    doLast {
+        javaexec {
+            main = 'simpl1f1ed.bot.App'
+            classpath = sourceSets.main.runtimeClasspath
+            args = [] // Add any arguments you want to pass to your application
+        }
+    }
 }
