--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ jar {
         attributes 'Main-Class': 'simpl1f1ed.bot.App'
     }
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
