--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,16 @@ repositories {
     }
 }
 
+configurations {
+    includedDependencies
+    compileOnly {
+        extendsFrom includedDependencies
+    }
+}
+
 dependencies {
-    // Example dependency: Replace with actual dependencies
-    implementation files('libs/JDA-5.0.0-beta.13-withDependencies.jar')
-    implementation files('libs/sqlite-jdbc-3.43.0.0.jar')
+    includedDependencies files('libs/JDA-5.0.0-beta.13-withDependencies.jar')
+    includedDependencies files('libs/sqlite-jdbc-3.43.0.0.jar')
 }
 
 sourceSets {
@@ -25,7 +31,7 @@ jar {
         attributes 'Main-Class': 'simpl1f1ed.bot.App'
     }
     from {
-        configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.includedDependencies.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
