--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ sourceSets {
 }
 
 jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     manifest {
         attributes 'Main-Class': 'simpl1f1ed.bot.App'
     }
